bk_ida/gccida/c0/ix86_libcall_value
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_libcall_value/src/i386.c:2789:26: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  ix86_libcall_value( machine_mode mode) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_libcall_value/src/i386.c:2810:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_FLOAT && ( target_flags & 0x20) != 0 ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_libcall_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_libcall_value/src/i386.c:2816:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_VECTOR_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_libcall_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_libcall_value/src/i386.c:2817:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v4 = mode_class_0[mode] == MODE_VECTOR_FLOAT; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_libcall_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_libcall_value/src/obj/i386.o] Error 1
